# canteen

./: .gitignore  CLAUDE.md  CMakeLists.txt  CalendarWindow.cpp  DishData.cpp  HistoryWindow.cpp  RadarChartWidget.cpp  Recommend.cpp  StatisticsWindow.cpp  TEAM_API.md  UI_requests.md  achievementdata.h  achievementmanager.cpp  achievementmanager.h  achievementpage.cpp  achievementpage.h  achievements.json  aireportdialog.cpp  aireportdialog.h  bring_to_front.ps1  calendarwindow.cpp  calendarwindow.h  capture.ps1  capture2.ps1  chartwidgets.cpp  chartwidgets.h  daily_records.json  decopainter.cpp  decopainter.h  dishdata.cpp  dishdata.h  dishes.json  distancedb.cpp  distancedb.h  distances.db  distances.json  draw_logic.md  eating_times.json  fuzzysearch.cpp  fuzzysearch.h  (+40 more)
docs/: video_script.md
docs/superpowers/plans/: 2026-05-29-menu-remove-plan.md
docs/superpowers/specs/: 2026-05-29-menu-remove-design.md
